hphp/test/slow/hni/coerce_with_error_in_tostring.php.expectf

Catchable fatal error: Method Foo::__toString() must return a string value in %s on line 5
